--- a/.ipynb Files/Functionality-2.ipynb
+++ b/.ipynb Files/Functionality-2.ipynb
@@ -5,10 +5,10 @@
    "id": "c992ddb6-555b-4821-8f4c-b7a82eb0a411",
    "metadata": {},
    "source": [
-    "# MetaboliQ AI\n",
+    "# DiabectufyAI\n",
     "## ~ by Mavericks\n",
     "### Functionality 2\n",
-    "This Jupyter Notebook contains the *Decision Tree Classifier Model* for the second functionality of MetaboliQ AI.  \n",
+    "This Jupyter Notebook contains the *Decision Tree Classifier Model* for the second functionality of Diabectify AI.  \n",
     "Problem Statement: Predicting Diabetes risk based on lifestyle of common masses.  \n",
     "  \n",
     "Developed for:  \n",
