--- a/.ipynb Files/Functionality-1.ipynb
+++ b/.ipynb Files/Functionality-1.ipynb
@@ -5,11 +5,11 @@
    "id": "d12bf632-bc56-4831-91a5-d89ef5b27634",
    "metadata": {},
    "source": [
-    "# MetaboliQ AI\n",
+    "# Diabectify AI\n",
     "### ~ by Mavericks\n",
     "  \n",
     "#### Functionality 1  \n",
-    "This Jupyter Notebook contains the *Linear Regression Model* for the first functionality of MetaboliQ AI.  \n",
+    "This Jupyter Notebook contains the *Linear Regression Model* for the first functionality of Diabectify AI.  \n",
     "Problem Statement: Projecting the number of diabetic patients in a region for the next 10 years.\n",
     "  \n",
     "Developed for:  \n",
