Update and rename Functionality-3 (4).ipynb to Functionality-3.ipynb

--- a/.ipynb Files/Functionality-3.ipynb
+++ b/.ipynb Files/Functionality-3.ipynb
@@ -5,10 +5,10 @@
    "id": "4fd16e4d-5f31-4d33-8cd2-8a193214df8a",
    "metadata": {},
    "source": [
-    "# MetaboliQ AI\n",
+    "# Diabectify AI\n",
     "## ~ by Mavericks\n",
     "### Functionality 3\n",
-    "This Jupyter Notebook contains the *Random Forest Classifier Model* for the third functionality of the MetaboliQ AI.  \n",
+    "This Jupyter Notebook contains the *Random Forest Classifier Model* for the third functionality of the Diabectify AI.  \n",
     "Problem Statement: To classify the type of diabetes based on the medical reports of a patient.  \n",
     "Developed for:  \n",
     "1. Doctors  \n",
