Update and rename Functionality-4 (4).ipynb to Functionality-4.ipynb

--- a/.ipynb Files/Functionality-4.ipynb
+++ b/.ipynb Files/Functionality-4.ipynb
@@ -13,10 +13,10 @@
    "id": "8e0ff6dd-4abb-48db-ae67-21222bc8f183",
    "metadata": {},
    "source": [
-    "# MetaboliQ AI\n",
+    "# Diabectify AI\n",
     "### ~ by Mavericks\n",
     "### Functionality 4\n",
-    "This Jupyter Notebook contains the Decision Tree Classifier for the first functionality of MetaboliQ AI.  \n",
+    "This Jupyter Notebook contains the Decision Tree Classifier for the first functionality of Diabectify AI.  \n",
     "Problem Statement: Predicting the gestational Diabetes in Women.\n",
     "\n",
     "Developed for:  \n",
